crates/runtime/tests/models/snapshots/integration_models__models__search__additional_columns_metadata_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "reference_answer": "Choices create costs and benefits.",
        "source": "textbook_reasoning"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "Choices create costs and benefits."
        ]
      },
      "primary_key": {
        "id": 863
      },
      "score": 0.94
    },
    {
      "data": {
        "reference_answer": "2a + 4b",
        "source": "textbook_reasoning"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\(\\boxed{2a + 4b}\\)"
        ]
      },
      "primary_key": {
        "id": 1316
      },
      "score": 0.92
    },
    {
      "data": {
        "reference_answer": "x = A + E",
        "source": "textbook_reasoning"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\(\\boxed{x = A + E}\\)"
        ]
      },
      "primary_key": {
        "id": 590
      },
      "score": 0.91
    },
    {
      "data": {
        "reference_answer": "78.54 cm\u00b2\n\nPlease provide the actual question and detailed answer you need me to work with.",
        "source": "textbook_reasoning"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
        ]
      },
      "primary_key": {
        "id": 6
      },
      "score": 0.91
    }
  ]
}
