crates/runtime/tests/models/snapshots/integration_models__models__search__basic_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "What is created by making a choice?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "Choices create costs and benefits."
        ]
      },
      "primary_key": {
        "id": 863
      },
      "_score": "0.89"
    },
    {
      "data": {
        "question": "Write down in simplest form \\( 5a - 2b - 3a + 6b \\)."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\(\\boxed{2a + 4b}\\)"
        ]
      },
      "primary_key": {
        "id": 1316
      },
      "_score": "0.84"
    },
    {
      "data": {
        "question": "Make \\( x \\) the subject of the formula \\( x - A = E \\)."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\(\\boxed{x = A + E}\\)"
        ]
      },
      "primary_key": {
        "id": 590
      },
      "_score": "0.83"
    },
    {
      "data": {
        "question": "<refined question>"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
        ]
      },
      "primary_key": {
        "id": 6
      },
      "_score": "0.83"
    }
  ]
}
