crates/runtime/tests/models/snapshots/integration_models__models__search__basic_vector_search_sql_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "_score": "0.87"
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "_score": "0.82"
  },
  {
    "id": 438,
    "answer": "The Cat does not need to drink, as it obtains sufficient water from its prey.",
    "_score": "0.80"
  },
  {
    "id": 1041,
    "answer": "A common thermometer operates on the principle that matter usually expands when it absorbs heat energy.",
    "_score": "0.77"
  }
]
