crates/runtime/tests/models/snapshots/integration_models__models__search__basic_vector_search_sql_no_score.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits."
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)"
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)"
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
  }
]
