crates/runtime/tests/models/snapshots/integration_models__models__search__basic_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/models/search.rs
expression: explain_resp?
snapshot_kind: text
---
[
  {
    "plan_type": "logical_plan",
    "plan": "Projection: vector_search().id, vector_search().answer\n  Sort: vector_search().score DESC NULLS FIRST, fetch=4\n    BytesProcessedNode\n      TableScan: vector_search() projection=[id, answer, score]"
  },
  {
    "plan_type": "physical_plan",
    "plan": "ProjectionExec: expr=[id@0 as id, answer@1 as answer]\n  SortPreservingMergeExec: [score@2 DESC], fetch=4\n    SortExec: TopK(fetch=4), expr=[score@2 DESC], preserve_partitioning=[true]\n      BytesProcessedExec\n        ProjectionExec: expr=[id@0 as id, answer@2 as answer, score@1 as score]\n          CoalesceBatchesExec: target_batch_size=8192\n            CoalesceBatchesExec: target_batch_size=8192\n              HashJoinExec: mode=Partitioned, join_type=Left, on=[(id@0, id@0)], projection=[id@0, score@1, answer@3]\n                CoalesceBatchesExec: target_batch_size=8192\n                  RepartitionExec: partitioning=Hash([id@0], 10), input_partitions=10\n                    CoalesceBatchesExec: target_batch_size=8192\n                      BytesProcessedExec\n                        ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as score]\n                          RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1\n                            BytesProcessedExec\n                              S3VectorsQueryExec: limit=100\n                CoalesceBatchesExec: target_batch_size=8192\n                  RepartitionExec: partitioning=Hash([id@0], 10), input_partitions=10\n                    RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1\n                      CoalesceBatchesExec: target_batch_size=8192\n                        BytesProcessedExec\n                          SchemaCastScanExec\n                            DataSourceExec: partitions=1, partition_sizes=[10]\n"
  }
]
