crates/runtime/tests/models/snapshots/integration_models__models__search__basic_vector_search_sql_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "question": "What is created by making a choice?",
    "subject": "economics",
    "_score": "[score]"
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)",
    "question": "Write down in simplest form \\( 5a - 2b - 3a + 6b \\).",
    "subject": "math",
    "_score": "[score]"
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)",
    "question": "Make \\( x \\) the subject of the formula \\( x - A = E \\).",
    "subject": "math",
    "_score": "[score]"
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "question": "<refined question>",
    "subject": "medicine",
    "_score": "[score]"
  }
]
