crates/runtime/tests/models/snapshots/integration_models__models__search__basic_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, question, subject, trunc(score, 3) as score FROM vector_search(qs, 'second') order by score desc LIMIT 4"
snapshot_kind: text
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                         |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, fetch=4                                                                                                                        |
|               |   Projection: vector_search().id, vector_search().answer, vector_search().question, vector_search().subject, trunc(vector_search().score, Int64(3)) AS score |
|               |     BytesProcessedNode                                                                                                                                       |
|               |       TableScan: vector_search() projection=[id, question, answer, subject, score]                                                                           |
| physical_plan | SortPreservingMergeExec: [score@4 DESC], fetch=4                                                                                                             |
|               |   SortExec: TopK(fetch=4), expr=[score@4 DESC], preserve_partitioning=[true]                                                                                 |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, question@1 as question, subject@3 as subject, trunc(score@4, 3) as score]                          |
|               |       BytesProcessedExec                                                                                                                                     |
|               |         ProjectionExec: expr=[id@0 as id, question@2 as question, answer@3 as answer, subject@4 as subject, score@1 as score]                                |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                        |
|               |             CoalesceBatchesExec: target_batch_size=8192                                                                                                      |
|               |               HashJoinExec: mode=Partitioned, join_type=Left, on=[(id@0, id@0)], projection=[id@0, score@1, question@3, answer@4, subject@5]                 |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                  |
|               |                   RepartitionExec: partitioning=Hash([id@0], 10), input_partitions=10                                                                        |
|               |                     CoalesceBatchesExec: target_batch_size=8192                                                                                              |
|               |                       BytesProcessedExec                                                                                                                     |
|               |                         ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as score]                                                           |
|               |                           BytesProcessedExec                                                                                                                 |
|               |                             RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1                                                            |
|               |                               S3VectorsQueryExec: limit=30                                                                                                   |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                  |
|               |                   RepartitionExec: partitioning=Hash([id@0], 10), input_partitions=10                                                                        |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(10), input_partitions=1                                                                    |
|               |                       CoalesceBatchesExec: target_batch_size=8192                                                                                            |
|               |                         BytesProcessedExec                                                                                                                   |
|               |                           SchemaCastScanExec                                                                                                                 |
|               |                             DataSourceExec: partitions=1, partition_sizes=[10]                                                                               |
|               |                                                                                                                                                              |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------+
